use Long.valueOf instead of new Long
git-svn-id: https://svn.exedio.com/cope/trunk/cops@4820 e7d4fc99-c606-0410-b9bf-843393a9eab7